added red to hover while visiting links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!--
-Template Website
+<!-- 
+ Template Website
 
 Copyright (C) 2024-2025 QB Networks
 
@@ -29,21 +29,27 @@ GNU Affero General Public License for more details.
 
 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <https://www.gnu.org/licenses/>.
-
   -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Multi-Column Layout</title>
+    <title>QB Networks</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="img/qbnetworks.svg" type="image/x-icon">
 </head>
 <body>
     <div class="container">
-        <div class="column">Column 1</div>
-        <div class="column">Column 2</div>
-        <div class="column">Column 3</div>
+        <div class="column"><a href="https://qbnetworks.xyz" target="_blank">QB Networks</a></div>
+        <div class="column"><a href="https://mascollabs.xyz" target="_blank">Masscollabs Services</a></div>
+        <div class="column"><a href="https://procyberian.xyz" target="_blank">Procyberian Systems Distribution</a></div>
+        <div class="column"><a href="https://masscollaborationlabs.xyz">Mass Collaboration Labs</a></div>
+        <div class="column"><a href="https://amassivus.xyz">amassivus</a></div>
+        <div class="column"><a href="https://godigitalist.xyz">godigitalist</a></div>
+        <div class="column"><a href="https://bilsege.xyz">bilsege</a></div>
+        <div class="column"><a href="https://birlesik.xyz">Birleşik Dergi</a></div>
     </div>
 </body>
 </html>
