--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 <body>
     <div class="container">
         <div class="column"><a href="https://qbnetworks.xyz" target="_blank">QB Networks</a></div>
-        <div class="column"><a href="https://mascollabs.xyz" target="_blank">Masscollabs Services</a></div>
+        <div class="column"><a href="https://masscollabs.xyz" target="_blank">Masscollabs Services</a></div>
         <div class="column"><a href="https://procyberian.xyz" target="_blank">Procyberian Systems Distribution</a></div>
         <div class="column"><a href="https://masscollaborationlabs.xyz">Mass Collaboration Labs</a></div>
         <div class="column"><a href="https://amassivus.xyz">amassivus</a></div>
