target blank added

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         <div class="column"><a href="https://qbnetworks.xyz" target="_blank">QB Networks</a></div>
         <div class="column"><a href="https://masscollabs.xyz" target="_blank">Masscollabs Services</a></div>
         <div class="column"><a href="https://procyberian.xyz" target="_blank">Procyberian Systems Distribution</a></div>
-        <div class="column"><a href="https://masscollaborationlabs.xyz">Mass Collaboration Labs</a></div>
-        <div class="column"><a href="https://amassivus.xyz">amassivus</a></div>
-        <div class="column"><a href="https://godigitalist.xyz">godigitalist</a></div>
-        <div class="column"><a href="https://bilsege.xyz">bilsege</a></div>
-        <div class="column"><a href="https://birlesik.xyz">Birleşik Dergi</a></div>
+        <div class="column"><a href="https://masscollaborationlabs.xyz" target="_blank">Mass Collaboration Labs</a></div>
+        <div class="column"><a href="https://amassivus.xyz" target="_blank">amassivus</a></div>
+        <div class="column"><a href="https://godigitalist.xyz" target="_blank">godigitalist</a></div>
+        <div class="column"><a href="https://bilsege.xyz" target="_blank">bilsege</a></div>
+        <div class="column"><a href="https://birlesik.xyz" target="_blank">Birleşik Dergi</a></div>
     </div>
 </body>
 </html>
