footer added with red hover and copyright

--- a/index.html
+++ b/index.html
@@ -51,5 +51,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         <div class="column"><a href="https://bilsege.xyz" target="_blank">bilsege</a></div>
         <div class="column"><a href="https://birlesik.xyz" target="_blank">Birleşik Dergi</a></div>
     </div>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024-2025 QB Networks. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
